--- a/index.html
+++ b/index.html
@@ -9,11 +9,20 @@
 </head>
 <body>
   <div id="container">
+    <!-- Inicio da marca -->
     <div id="marca">
       Marca
     </div>
+    <!-- Inicio do conteudo -->
     <div id="conteudo">
       <div id="conteudo-principal">
+        <h2>
+          Conteúdo Principal
+        </h2>
+        <img src="imagem/natureza.jpg" alt="natureza" width="450">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis vitae libero ad reprehenderit unde laudantium facilis delectus eveniet, velit omnis repudiandae nam dolore enim laborum aliquam quod sed, labore totam.
+        </p>
         <h2>
           Conteúdo Principal
         </h2>
@@ -40,6 +49,7 @@
         </p>
       </div>
     </div>
+    <!-- Inicio da Navegaçao -->
     <div id="navegacao">
       <ul>
         <li>
@@ -59,6 +69,7 @@
         </li>
       </ul>
     </div>
+    <!-- Inicio do rodapé -->
     <div id="rodape">
       rodape
     </div>
