--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
         <h2>
           Conteúdo Principal
         </h2>
-        <img src="imagem/natureza.jpg" alt="natureza" width="450">
+        <!-- <div id="imagem">
+          <img src="imagem/natureza.jpg" alt="natureza">
+        </div> -->
+        <img class="img-noticia" src="imagem/natureza.jpg" alt="">
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis vitae libero ad reprehenderit unde laudantium facilis delectus eveniet, velit omnis repudiandae nam dolore enim laborum aliquam quod sed, labore totam.
         </p>
