--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </div>
     <!-- Inicio do rodapé -->
     <div id="rodape">
-      rodape
+      <p>rodape</p>
     </div>
   </div>
 </body>
